--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
+    "expo-camera": "~12.2.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -25,5 +26,17 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "description": "This test app created by Nuwan Wijeweera",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/G-13-Project/UITestApp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/G-13-Project/UITestApp/issues"
+  },
+  "homepage": "https://github.com/G-13-Project/UITestApp#readme"
 }
